Update your profile index.html

--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
         <tr>
             <td width="350"><img width="300" height="400" src="https://images.unsplash.com/photo-1552058544-f2b08422138a?q=80&w=1299&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></td>
             <td>
-                <h2><b>Name:</b></h2> Tongpool Heeptaisong <br>
-                <h2><b>Email:</b></h2> <a href="mailto:tongpool.h@itd.kmutnb.ac.th">tongpool.h@itd.kmutnb.ac.th</a> <br>
-                <h2><b>Facebook:</b></h2> <a href="http://www.facebook.com" target="_blank">Tongpool.H@FB</a> <br>
-                <h2><strong>Mobile:</strong></h2> 09-xxxx-0023 <br>
+                <h2><b>Name:</b></h2> Siwakorn Supareak <br>
+                <h2><b>Nickname:</b> Fon </h2>
+                <h2><b>Email:</b></h2> <a href="s6507012662080@email.kmutnb.ac.th">tongpool.h@itd.kmutnb.ac.th</a> <br>
+                <h2><b>Facebook:</b></h2> <a href="http://www.facebook.com" target="_blank">Siwakorn.Sup</a> <br>
+                <h2><strong>Mobile:</strong></h2> 09-xxxx-0049 <br>
             </td>
         </tr>
     </table>
 
     <h2>About me</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio nam ipsa nobis animi. Aspernatur aperiam at aut harum excepturi! Ipsum, ea! Non necessitatibus expedita minima. Dolorum neque cumque laudantium aspernatur?</p>
+    <p>Hello my name is Siwakorn Supareak</p>
 
     <h2>My Skills</h2>
     <ul>
@@ -54,10 +55,10 @@
 
     <h2>Comment</h2>
     <form action="">
-        <label for="">Name:</label> <br>
-        <input type="text" name="" id=""> <br>
-        <label for="">Email:</label> <br>
-        <input type="email" name="" id=""> <br><br>
+        <label for="">Name:Siwakorn</label> <br>
+        <input type="text" name="Siwakorn" id="6507012662080"> <br>
+        <label for="">Email: s6507012662080@email.kmutnb.ac.th </label> <br>
+        <input type="s6507012662080@email.kmutnb.ac.th" name="" id=""> <br><br>
         <input type="submit" value="Submit">
     </form>
 
