--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <td>
                 <h2><b>Name:</b></h2> Siwakorn Supareak <br>
                 <h2><b>Nickname:</b> Fon </h2>
-                <h2><b>Email:</b></h2> <a href="s6507012662080@email.kmutnb.ac.th">tongpool.h@itd.kmutnb.ac.th</a> <br>
+                <h2><b>Email:</b></h2> <a href="s6507012662080@email.kmutnb.ac.th">s6507012662080@email.kmutnb.ac.th</a> <br>
                 <h2><b>Facebook:</b></h2> <a href="http://www.facebook.com" target="_blank">Siwakorn.Sup</a> <br>
                 <h2><strong>Mobile:</strong></h2> 09-xxxx-0049 <br>
             </td>
